CUI-1248: Tour: visual issues (button margin, text overflow, text padding)
* Updated button margin.

--- a/legacy/components/styles/tour.less
+++ b/legacy/components/styles/tour.less
@@ -133,7 +133,7 @@ Class: .tour
 
     >button {
       position: relative;
-      margin: 9*@px;
+      margin: 6*@px;
       z-index: 1;
       display: none;
 
